jasn/examples/invalid/mismatched_quotes.jasn
/* Mismatched quotes */
{
  bad: "starts with double ends with single'
}
